Separate generator object and IYield
Do not allow access to "Yield" method outside the delegate and do not
allow other generator methods to be called from within the delegate.

--- a/Generator45/Generator45.csproj
+++ b/Generator45/Generator45.csproj
@@ -43,6 +43,7 @@
     <Compile Include="IYield.cs" />
     <Compile Include="IYieldAwaiter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Yield.cs" />
     <Compile Include="YieldAwaiter.cs" />
     <Compile Include="YieldAwaiterBase.cs" />
     <Compile Include="YieldAwaiterWellDefined.cs" />
