--- a/Generator/Generator.csproj
+++ b/Generator/Generator.csproj
@@ -1,17 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B048CBB1-6A36-4E6D-BDAD-BA2D2DE56E5B}</ProjectGuid>
+    <ProjectGuid>{3C518A77-8AAE-4E1E-B3F3-ABB7DD05FEFA}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Generator</RootNamespace>
     <AssemblyName>Generator</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,17 +39,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExpressionVisitor.cs" />
-    <Compile Include="Gen.cs" />
     <Compile Include="Generator.cs" />
-    <Compile Include="IYield.cs" />
+    <Compile Include="GeneratorExhaustedException.cs" />
     <Compile Include="IGenerator.cs" />
+    <Compile Include="IYield.cs" />
+    <Compile Include="IYieldAwaiter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Generator.nuspec">
-      <SubType>Designer</SubType>
-    </None>
+    <Compile Include="Yield.cs" />
+    <Compile Include="YieldAwaiter.cs" />
+    <Compile Include="YieldAwaiterBase.cs" />
+    <Compile Include="YieldAwaiterWellDefined.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
